<resources>
    <string name="app_name">Calculator</string>
    <string name="button4">/</string>
    <string name="button3">*</string>
    <string name="button2">-</string>
    <string name="button1">+</string>
    <string name="enter_first_number">enter first number</string>
    <string name="enter_second_number">enter second number</string>
    <string name="lets_calculate">Lets Calculate..</string>
</resources>