<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="132dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/calculator" />

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:shadowColor="#E11313"
        android:textColor="#E8E0E0"
        android:textColorHighlight="#D5D5D5"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#EDEBEB"
        android:textColorHint="#F1EAEA" />

    <Button
        android:id="@+id/button1"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#E91E63"
        android:onClick="btnsum"
        android:text="@string/button1"
        android:textColorHighlight="#EFE7E7"
        android:textColorLink="#870E0E"
        android:textStyle="bold"
        app:iconTint="#DCDCDC" />

    <Button
        android:id="@+id/button2"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="#E91E63"
        android:onClick="btnsubtract"
        android:text="@string/button2"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:backgroundTint="#E91E63"
        android:onClick="btnmultiply"
        android:text="@string/button3"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:backgroundTint="#E91E63"
        android:onClick="btndivide"
        android:text="@string/button4"
        android:textColor="#F4F4F4"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textStyle="bold"
        tools:targetApi="s" />

    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="131dp"
        android:layout_height="45dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Result"
        android:textColor="#FFF6F6"
        android:textSize="30sp" />
</LinearLayout>